<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WNC Milers</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="about_app">About</string>
    <string name="App_help">Help</string>
    <string name="person_address">Address Line 1</string>
    <string name="person_address_line2">Address Line 2</string>
    <string name="person_phone_number">Phone Number</string>
    <string name="person_email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="state">State</string>
    <string name="membership_level">Membership Level</string>
    <string name="zip_code">Zip Code</string>
	<string name="city">City</string>
	<string name="first_Name">First Name</string>
	<string name="last_Name">Last Name</string>

    <string-array name="states_array">
        <item>AK</item>
        <item>AL</item>
        <item>AR</item>
		<item>AZ</item>
		<item>CA</item>
		<item>CO</item>
		<item>CT</item>
		<item>DE</item>
		<item>FL</item>
		<item>GA</item>
		<item>HI</item>
		<item>IA</item>
		<item>ID</item>
		<item>IL</item>
		<item>IN</item>
		<item>KS</item>
		<item>KY</item>
		<item>LA</item>
		<item>MA</item>
		<item>MD</item>
		<item>ME</item>
		<item>MI</item>
		<item>MN</item>
		<item>MO</item>
		<item>MS</item>
		<item>MT</item>
		<item>NC</item>
		<item>ND</item>
		<item>NE</item>
		<item>NH</item>
		<item>NJ</item>
		<item>NM</item>
		<item>NV</item>
		<item>NY</item>
		<item>OH</item>
		<item>OK</item>
		<item>OR</item>
		<item>PA</item>
		<item>RI</item>
		<item>SC</item>
		<item>SD</item>
		<item>TN</item>
		<item>TX</item>
		<item>UT</item>
		<item>VA</item>
		<item>VT</item>
		<item>WA</item>
		<item>WI</item>
		<item>WV</item>
		<item>WY</item>
    </string-array>
    
     <string-array name="month_array">
		<item>January</item>
		<item>February</item>
		<item>March</item>
		<item>April</item>
		<item>May</item>
		<item>June</item>
		<item>July</item>
		<item>August</item>
		<item>September</item>
		<item>October</item>
		<item>November</item>
		<item>December</item>
	</string-array>
	
     <string-array name="membership_level_array">
		<item>Scholastic - $20</item>
		<item>Individual - $25</item>
		<item>Family - $50</item>
		<item>Small Business - $100</item>
		<item>Corporation - $1000</item>
	</string-array>
	
     <string-array name="designation_array">
		<item>Mr.</item>
		<item>Mrs.</item>
		<item>Ms.</item>
		<item>Miss</item>
	</string-array>
	
	<string name="zip_code">Zip Code</string>
	<string name="city">City</string>
	<string name="runkeeperlogin">Login</string>
	<string-array name="workoutType_array">
		<item >Running</item>
		<item >Walking</item>
	</string-array>
		<string name="Feedback_Prompt">Enter feedback details to send to the developers:</string>
		<string name="your_name">Your Name</string>
		<string name="your_email">Your Email (optional)</string>
	<string-array name="feedback_Type">
		<item>Appreciation</item>
		<item>Suggestion</item>
		<item>Complaint</item>
		<item>Bug Report</item>
	</string-array>
		<string name="feedback_details">Feedback Details</string>
		<string name="AttachImage">Attach Image</string>
		<string name="attach_screenshot">Attach Screenshot</string>
		<string name="RKLaunchtxt">Launch RunKeeper</string>
		<string name="BirthDate">Birthdate:</string>
		<string name="Day">Day</string>
		<string name="Year">Year</string>
		<string name="membershipLevel">Membership Level</string>
		<string name="submit_feedback">Submit Feedback</string>
		<string name="upcoming_events">Upcoming Events</string>
</resources>