<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/about" android:orderInCategory="100" android:showAsAction="never" android:title="@string/about_app" /><item android:id="@+id/events" android:title="@string/upcoming_events" android:orderInCategory="101" android:showAsAction="never"></item><item
        android:id="@+id/application_feedback"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/submit_feedback"/>
     
     <item android:id="@+id/LRK" android:title="@string/RKLaunchtxt" android:orderInCategory="103" android:showAsAction="never"></item>
     <item android:id="@+id/login" android:title="@string/runkeeperlogin" android:orderInCategory="104" android:showAsAction="never"></item>
     

</menu>